fix Quill text typing issue on mobiles

--- a/src/components/Editor/styles.css
+++ b/src/components/Editor/styles.css
@@ -1,11 +1,13 @@
 .quill {
-  height: calc(70vh - 65px);
+  min-height: 350px;
+  height: 450px;
 }
 
 .ql-toolbar {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  color: white
+  color: white;
+  background: white;
 }
 
 .ql-container {
@@ -15,14 +17,15 @@
 }
 
 .editor {
-  height: 100%;
+  height: auto;
   position: relative;
-  margin-bottom: 3rem;
+  margin: 1rem 0 3rem;
+  min-height: 400px;
 }
 
 .submit {
   position: absolute;
-  bottom: -6rem;
+  bottom: -7rem;
   border: 1px solid var(--border-1);
   border-radius: 10px;
   height: 1.9rem;
@@ -44,15 +47,9 @@
   }
 }
 
-.ql-snow .ql-picker,
-.ql-snow .ql-stroke {
-  color: white;
-  stroke: white;
-}
-
 .msg {
   position: absolute;
-  top: 15%;
+  top: 20%;
   height: 200px;
   text-align: center;
   border-radius: 10px;
@@ -63,4 +60,12 @@
   box-sizing: border-box;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.ql-editor.ql-blank::before {
+  color: rgba(255,255,255,.7)
+}
+
+.ql-color .ql-color-label.ql-stroke {
+  stroke: #00ff00;
 }
